[fea] cart stores only ids
